force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Actual_decision_notification_date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Actual_decision_notification_date__c</fullName>
    <label>Actual decision notification date</label>
    <type>Date</type>
</CustomField>