force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Additional_Source_Information__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Additional_Source_Information__c</fullName>
    <label>Additional Source Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>