force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Anticipated_decision_date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Anticipated_decision_date__c</fullName>
    <inlineHelpText>Indicative date the funder will communicate decisions/results</inlineHelpText>
    <label>Anticipated decision date</label>
    <type>Date</type>
</CustomField>