force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Application_limit_for_institutions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Application_limit_for_institutions__c</fullName>
    <inlineHelpText>Limitation of proposals under funding body rules or requirement for one tender proposal representing La Trobe&apos;s broad expertise</inlineHelpText>
    <label>Application limit for La Trobe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>