force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Client_Supplied_Contract_Template__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Client_Supplied_Contract_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if the client has provided a contract template. The contract template is added to Documents under the &quot;Related&quot; tab</inlineHelpText>
    <label>Client Supplied Contract Template</label>
    <type>Checkbox</type>
</CustomField>