force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Comments_Notes__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Comments_Notes__c</fullName>
    <label>Comments/Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>