force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Competitive__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Competitive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This funding opportunity is awarded via a competitive process</inlineHelpText>
    <label>Competitive</label>
    <type>Checkbox</type>
</CustomField>