force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Conditions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Conditions__c</fullName>
    <description>Any conditions attached to this funding opportunity</description>
    <label>Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>