force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Confidential__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this opportunity is confidential to the researcher who identified it (and their managers etc.).</description>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>