force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Display_on_profile__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Display_on_profile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the funds scheme associated to this funding opportunity be presented on the profile</description>
    <label>Display on profile</label>
    <type>Checkbox</type>
</CustomField>