force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Eligibility_Criteria__c</fullName>
    <inlineHelpText>Eligibility of proposed applicants governed by granting rules.</inlineHelpText>
    <label>Eligibility Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>