force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Expected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Expected_Completion_Date__c</fullName>
    <label>Expected Completion Date</label>
    <type>Date</type>
</CustomField>