force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Funding_body_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_body_Ref_Number__c</fullName>
    <label>Client/Funding body reference number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>