force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Keywords__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Keywords__c</fullName>
    <description>A set of keywords that can be used to search this Funding Opportunity</description>
    <label>Keywords</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>