force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Long_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Long_Title__c</fullName>
    <description>To allow the long title from the data migration from Research Master</description>
    <label>Long Title</label>
    <type>TextArea</type>
</CustomField>