force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Match_Score__c</fullName>
    <description>How well a Funding Opportunity matches the specific search criteria. The higher the relative number in the search results, the better the match. Can be used for sorting.</description>
    <label>Match Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>