force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Maximum_Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Maximum_Available_Budget__c</fullName>
    <label>Maximum Available Budget</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>