force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_My_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_My_Opportunity__c</fullName>
    <formula>IF(I_RS_Research_Office_Contact__c = $User.Id , TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Opportunity</label>
    <type>Checkbox</type>
</CustomField>