force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Notice_of_Intent_Required__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Notice_of_Intent_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether it is expected that project proposals for this funding opportunity will be subjected to the NOI process.</description>
    <label>Notice of Intent Required</label>
    <type>Checkbox</type>
</CustomField>