force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Number_of_Project_Proposals__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Number_of_Project_Proposals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Projects/Project Proposals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>