force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to Industry Engagement Team&apos;s original Opportunity</inlineHelpText>
    <label>Industry Engagement Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Funding Opportunities</relationshipLabel>
    <relationshipName>Funding_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>