force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Opportunity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Opportunity_Sub_Type__c</fullName>
    <inlineHelpText>Type of engagement when successful (if different to the proposal type)</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_Type_of_Opportunity__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Sub_Type</valueSetName>
    </valueSet>
</CustomField>