force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation_Name__c</fullName>
    <formula>I_RS_Organisation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation Name</label>
    <type>Text</type>
</CustomField>