force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Philanthropic__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Philanthropic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Yes/No</description>
    <inlineHelpText>This opportunity is funded by a philanthropic donation</inlineHelpText>
    <label>Philanthropic</label>
    <type>Checkbox</type>
</CustomField>