force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Record_Type_Developer_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Developer Name</label>
    <type>Text</type>
</CustomField>