force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Record_URL__c</fullName>
    <description>Record hyperlink. Used in custom UIs that need to show full record detail.</description>
    <formula>/*Base URL*/ 
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) 
+ 
/*Record Id*/ 
Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record URL</label>
    <type>Text</type>
</CustomField>