force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Research_Office_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Office_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact person from research office</description>
    <label>Research Portfolio Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Research_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>