force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Research_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to maintain hierarchy and related research opportunities</description>
    <label>Funding Scheme</label>
    <referenceTo>Research_Opportunity__c</referenceTo>
    <relationshipLabel>Funding Opportunities</relationshipLabel>
    <relationshipName>Research_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>