force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Research_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Opportunity_Number__c</fullName>
    <displayFormat>LTU{MM}{YY}{000}</displayFormat>
    <label>Research Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>