force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Source__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Source__c</fullName>
    <label>Source of opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approach by industry</fullName>
            </value>
            <value>
                <fullName>Industry Engagement</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
            <value>
                <fullName>Publicly available</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Grant connect</fullName>
            </value>
            <value>
                <fullName>Research Professional</fullName>
            </value>
            <value>
                <fullName>AAO</fullName>
                <label>Alumni and Advancement Office</label>
            </value>
            <value>
                <fullName>GRS</fullName>
                <label>Graduate Research School</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>