force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Summary_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Summary_of_Opportunity__c</fullName>
    <label>Summary of Opportunity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>