force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Type_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type_of_Opportunity__c</fullName>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_Of_Opportunity</valueSetName>
    </valueSet>
</CustomField>