force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_Type_of_relationship__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type_of_relationship__c</fullName>
    <label>Type of relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collaborator</fullName>
            </value>
            <value>
                <fullName>Sub-contractor</fullName>
            </value>
            <value>
                <fullName>Funding body/client (i.e. awards)</fullName>
            </value>
            <value>
                <fullName>Transfer In</fullName>
            </value>
            <value>
                <fullName>Transfer Out</fullName>
            </value>
            <value>
                <fullName>Relinquish</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Transfer of administration to La Trobe</fullName>
            </value>
            <value>
                <fullName>Transfer of administration from La Trobe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>