force-app/main/default/objects/Research_Opportunity__c/fields/I_RS_URL_to_website__c.field-meta.xml
<CustomField>
    <fullName>I_RS_URL_to_website__c</fullName>
    <label>Link to Website</label>
    <type>Url</type>
</CustomField>