force-app/main/default/objects/Research_Opportunity__c/recordTypes/I_RS_Funding_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Funding_Opportunity</fullName>
    <active>true</active>
    <label>Funding Opportunity</label>
</RecordType>