force-app/main/default/objects/Research_Opportunity__c/recordTypes/I_RS_Funding_Scheme.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Funding_Scheme</fullName>
    <active>true</active>
    <label>Funding Scheme</label>
</RecordType>