force-app/main/default/objects/Research_Opportunity__c/validationRules/Type_of_opportunity_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_of_opportunity_required</fullName>
    <active>true</active>
    <description>Make the Type of Opportunity mandatory before making it &apos;Available&apos;</description>
    <errorConditionFormula>AND( 
TEXT(I_RS_Source__c) &lt;&gt; &quot;Research Professional&quot;, 
TEXT(I_RS_Status__c) = &quot;Available&quot;, 
ISBLANK(TEXT(I_RS_Type_of_Opportunity__c))
)</errorConditionFormula>
    <errorDisplayField>I_RS_Type_of_Opportunity__c</errorDisplayField>
    <errorMessage>Please provide a value</errorMessage>
</ValidationRule>