force-app/main/default/objects/Research_Opportunity__c/validationRules/Validation_Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Test</fullName>
    <active>true</active>
    <description>System-only rule to force validation error</description>
    <errorConditionFormula>Name = &apos;Error&apos;</errorConditionFormula>
    <errorMessage>Validation Message Here</errorMessage>
</ValidationRule>