force-app/main/default/objects/Research_Opportunity__c/listViews/All_Research_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Research_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Private__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>I_RS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Research_Opportunity__c.I_RS_Funding_Opportunity</value>
    </filters>
    <label>All Funding Opportunities</label>
</ListView>