force-app/main/default/objects/Research_Opportunity__c/listViews/Grant_Funding_Opportunities.listView-meta.xml
<ListView>
    <fullName>Grant_Funding_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Proposal_to_be_Submitted_By__c</columns>
    <columns>I_RS_Funding_Category__c</columns>
    <columns>I_RS_Organisation_Name__c</columns>
    <columns>I_RS_Research_Office_Contact__c</columns>
    <columns>I_RS_Submission_Date__c</columns>
    <columns>I_RS_Research_Office_Due_Date__c</columns>
    <columns>I_RS_Number_of_Project_Proposals__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_Type_of_Opportunity__c</field>
        <operation>equals</operation>
        <value>Grant</value>
    </filters>
    <filters>
        <field>I_RS_Number_of_Project_Proposals__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Research_Opportunity__c.I_RS_Funding_Opportunity</value>
    </filters>
    <label>Grant Funding Opportunities</label>
</ListView>