force-app/main/default/objects/Research_Opportunity__c/listViews/My_Funding_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Funding_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Proposal_to_be_Submitted_By__c</columns>
    <columns>I_RS_Organisation_Name__c</columns>
    <columns>I_RS_Submission_Date__c</columns>
    <columns>I_RS_Research_Office_Due_Date__c</columns>
    <columns>I_RS_Number_of_Project_Proposals__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Research_Opportunity__c.I_RS_Funding_Opportunity</value>
    </filters>
    <filters>
        <field>I_RS_My_Opportunity__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Funding Opportunities</label>
</ListView>